sanger/sites/biliarytree/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biliarytree
spec:
  selector:
    matchLabels:
      app: biliarytree
  replicas: 1
  template:
    metadata: 
      name: biliarytree
      labels:
        app: biliarytree
    spec:
      volumes:
        - name: indexfiles
          emptyDir: {}
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: biliarytree
        ports:
        - containerPort: 80
          name: http
        command: ["/bin/sh", "-c", "cp -r /data/kubespray/sanger/sites/biliarytree/site/. /usr/share/nginx/html/ && nginx -g 'daemon off;'"]
        volumeMounts:
          - name: indexfiles
            mountPath: /data
        resources:
          requests:
            memory: "128M"
            cpu: "0.1"
          limits:
            memory: "512M"
            cpu: "0.7"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biliarytree-human-primary
spec:
  selector:
    matchLabels:
      app: biliarytree-human-primary
  replicas: 1
  template:
    metadata: 
      name: biliarytree-human-primary
      labels:
        app: biliarytree-human-primary
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: biliarytree-cellxgene-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.11.0
        imagePullPolicy: IfNotPresent
        name: biliarytree-human-primary
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/human_primary_biliary_and_liver_cells.h5ad", "-t", "Immune", "--host", "0.0.0.0", "--port", "5005"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "3Gi"
            cpu: 1
