sanger/sites/biliarytree/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: biliarytree
  labels:
    app: biliarytree
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
  selector:
    app: biliarytree
---
apiVersion: v1
kind: Service
metadata:
  name: biliarytree-human-primary
  labels:
    app: biliarytree-human-primary
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: biliarytree-human-primary
---
